# DIRV

./: README.md  pyproject.toml
src/: dirv.py  item.py  ranking.py
tests/: test_dirv.py
